# Skyrim-alchemy-tool

./: .gitignore  Cargo.toml  README.md
skyrim_alchemy_cli/: Cargo.toml
skyrim_alchemy_cli/src/: main.rs
skyrim_alchemy_db/: Cargo.toml  effects.json  fetch_data.sh  ingredients.json
skyrim_alchemy_db/src/: data.rs  lib.rs
skyrim_alchemy_wasm/: Cargo.toml
skyrim_alchemy_wasm/src/: lib.rs
skyrim_alchemy_web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
skyrim_alchemy_web/src/: App.vue
skyrim_alchemy_web/src/router/: index.ts
skyrim_alchemy_web/src/views/: AlchemyView.vue
